[package]
name = "giga-resize"
version = "0.1.0"
edition = "2021"

[dependencies]
"actix-web" = "4"
"serde" = {version = "1.0.204", features = ["derive"]}
"serde_json" = "1.0"
"tokio" = {version = "1.39.2", features = ["full"]}
log = "0.4"
env_logger = "0.9"
image = "0.24.6" 
lru = "0.12.4"
dotenvy = "0.15.7"
webp = "0.3.0"

