[package]
name = "giga-resize"
version = "0.1.0"
edition = "2021"

[dependencies]
"actix-web" = "4"
"serde" = {version = "1.0.204", features = ["derive"]}
"serde_json" = "1.0"
"tokio" = {version = "1.39.2", features = ["full"]}
log = "0.4"
env_logger = "0.9"
image = {version = "0.25.2", features = ["png"]}
webp = "0.3"
lru = "0.12.4"
dotenvy = "0.15.7"
fast_image_resize = {version = "4.2.1", features=["image"]}
